Fix: Navbar alignment error

--- a/assets/assets/scss/modules/_navbar.scss
+++ b/assets/assets/scss/modules/_navbar.scss
@@ -74,6 +74,7 @@
     &>div {
         cursor: pointer;
         line-height: 30px;
+        padding-bottom: 2px;
     }
 }
 
